--- a/index.html
+++ b/index.html
@@ -19,14 +19,18 @@
   </head>
   <body>
     <header class="header">
-      <div class="container header-conteiner">
+      <div class="container header-container">
       <a class="logo" href="./index.html"><img src="./img/logo.svg" alt="logo" /></a>
       <nav class="header-nav">
         <ul class="header-list list">
-          <li class="header-list-item current"><a class="link" href=""></a>About</li>
-          <li class="header-list-item"><a class="link" href=""></a>Services and prices</li>
-          <li class="header-list-item"><a class="link" href=""></a>Barbers</li>
-          <li class="header-list-item"><a class="link" href=""></a>Contacts</li>
+          <li class="header-list-item current">
+            <a class="header-link link" href=""></a>About</li>
+          <li class="header-list-item">
+            <a class="header-link link" href=""></a>Services and prices</li>
+          <li class="header-list-item">
+            <a class="header-link link" href=""></a>Barbers</li>
+          <li class="header-list-item">
+            <a class="header-link link" href=""></a>Contacts</li>
         </ul>
       </nav>
       <div class="header-contact">
